--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div><!-- RESULTS PANEL -->
             <div class="answer">
-                <img src="" alt="">
+                <img src="" alt="" class="fade">
             </div>
             <div class="result">
                 <output>
